--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/jetstream": "^2.6",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "morilog/jalali": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -26,6 +27,9 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "files" : [
+            "App/Helpers/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
