--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
-        "morilog/jalali": "^3.3",
-      "ext-http": "*"
+        "morilog/jalali": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
